--- a/ProyectoAngular/Practica2/Proyecto1/src/app/seccion/pag2/pag2.component.html
+++ b/ProyectoAngular/Practica2/Proyecto1/src/app/seccion/pag2/pag2.component.html
@@ -10,10 +10,11 @@
     <div class="mask p-1" style="background-color: rgba(168, 210, 232, 0.473); height: 50vh;">
   
     
-    <h2 style="color: snow;">Top-rated WordPress Hosting Support</h2> 
+    <h2 style="color: snow;">Top-rated WordPress Hosting Support</h2>
     <div class="p-2">
     <h6 style="color: snow;">Our Customer Care team is not only quick and night-skilled, but also among the nighese-rated</h6>  
     <h6 style="color: snow;">support squads you will find</h6>
+    <button (click)="event()">Hola</button>
     <div class="container">
         <div class="row p-4">
           <div class="col-sm">
@@ -57,6 +58,7 @@
               <h5 style="color:snow">Avilable 24/7</h5>
               <h6 style="color: rgb(172, 100, 41)">Round the-clock help center</h6>
           </div>
+      
         </div>
       </div>
     </div>
