--- a/ProyectoAngular/Practica3/Angular/src/app/section/form-h/form-h.component.html
+++ b/ProyectoAngular/Practica3/Angular/src/app/section/form-h/form-h.component.html
@@ -1,1 +1,11 @@
-<p>form-h works!</p>
+<div class="container">
+  <div class="row">
+      <div>
+          {{indice+1}}: {{empleadoL.nombre}} {{empleadoL.apellido}} {{empleadoL.cargo}} {{empleadoL.salario}}
+      </div>
+  </div>
+  </div>
+
+
+  
+  
